edit about me and vertically center login modal

--- a/apps/web/content/unrelated/our-story.mdx
+++ b/apps/web/content/unrelated/our-story.mdx
@@ -1,28 +1,46 @@
-## Our story 📜
+## Our Story 📖
 
-We met on Twitter in 2023, after couple of months of DM. We started to work on
-OpenStatus and were driven by these goals:
+AffEasy was born out of real-world frustration and a desire for a better solution. As an affiliate marketer myself, I faced the daily challenge of juggling multiple tools for different affiliate networks. The process was tedious and time-consuming - I found myself using up to 10 different tools just to create and manage my affiliate links.
 
-- Build something useful for other developers 🧑‍💻
-- A real-world project with all the latest hot technologies 🌶️
-- Be Open-Source 📖
+This firsthand experience sparked an idea: what if there was a single tool that could handle all of these tasks efficiently? That's how AffEasy came to life - a solution created by an affiliate marketer, for affiliate marketers.
 
-## Our values ⚖️
+## Our Mission 🚀
 
-We are a small team of 2 people, we are a small company. We are not a VC funded
-startup. We are not looking for investors. We want to keep our freedom and build
-a substainable business while working on features that provides the best value
-to our users.
+Our mission is deeply personal: to solve the very problems I encountered in my affiliate marketing journey. We aim to:
 
-We also want to be transparent about our business. We are not going to hide our
-ups and downs. We are going to share our journey with you.
+- Simplify affiliate link management across multiple networks 🔗
+- Dramatically reduce the time spent on link creation and tracking ⏱️
+- Provide a unified platform that replaces the need for numerous separate tools 🛠️
 
-## Our mission 🚀
+## Why AffEasy? 🤔
 
-We want to make the web faster and more reliable for everyone, wherever they are
-in the world. To achieve this, we are building a platform that helps developers
-monitor their websites and APIs.
+Having walked in the shoes of our users, we understand the challenges of affiliate marketing intimately. AffEasy isn't just a product; it's a solution to real problems faced by real marketers every day.
 
-We are here to fight Us-East-1 privilege. ⚔️
+### Unified Network Access
 
-<Tweet id="1696131704547905809" />
+Say goodbye to switching between multiple dashboards. Access all your affiliate networks from one central location.
+
+### Rapid Link Creation
+
+Remember the days of manually creating links across different platforms? With AffEasy, create affiliate links for any network in seconds, all from one place.
+
+### Powerful Analytics
+
+Gain insights into your affiliate performance across all networks, without the need to compile data from multiple sources.
+
+## Our Values ⚖️
+
+At AffEasy, our values are shaped by our own experiences in the field:
+
+- Empathy: We understand your challenges because we've faced them too
+- Efficiency: We're committed to saving you time and streamlining your workflow
+- Evolution: We continuously improve our platform based on real user feedback
+- Empowerment: We aim to give affiliate marketers the tools they need to thrive
+
+## Our Vision 🔭
+
+We envision a future where affiliate marketers can focus on what they do best - creating great content and building relationships - without getting bogged down by technical hurdles. AffEasy is here to handle the complexities, so you can concentrate on growing your business.
+
+## Join Us on This Journey 🤝
+
+As a fellow affiliate marketer, I invite you to try AffEasy and experience the difference it can make in your daily workflow. Let's revolutionize affiliate marketing together!
