--- a/apps/web/content/changelog/terraform-provider.mdx
+++ b/apps/web/content/changelog/terraform-provider.mdx
@@ -1,8 +1,8 @@
 ---
-title: Terraform Provider
-description: Manage your monitors with the Terraform provider
-image: /assets/changelog/terraform.png
-publishedAt: 2024-02-07
+title: CJ Support
+description: Adding Commission Junction as a supported affiliate network
+image: /cj.webp
+publishedAt: 2024-08-01
 ---
 
 We are excited to announce the release of the Terraform provider for OpenStatus.
