improve benefits section

--- a/apps/web/content/posts/why-open-source.mdx
+++ b/apps/web/content/posts/why-open-source.mdx
@@ -1,6 +1,6 @@
 ---
 title: Why Open Source 🌐
-image: /posts/open-source.webp
+image: /open-source.webp
 description: The benefits with our open-source approach.
 author:
   name: Ritanshu Dokania
