added privacy and terms

--- a/apps/web/content/legal/privacy.mdx
+++ b/apps/web/content/legal/privacy.mdx
@@ -1,10 +1,10 @@
 ---
 title: Privacy Policy
-updatedAt: 2023-05-29
+updatedAt: 2024-08-14
 ---
 
-Welcome to [openstatus.dev](/) (the "Site"), hosted by OpenStatus ("OpenStatus",
-"we", "us", and/or "our"). OpenStatus provides a platform for creating and
+Welcome to [affeasy.link](/) (the "Site"), hosted by AffEasy ("AffEasy",
+"we", "us", and/or "our"). AffEasy provides a platform for creating and
 managing short links (the "Services")​1​. We value your privacy and are
 dedicated to protecting your personal data. This Privacy Policy covers how we
 collect, handle, and disclose personal data on our Platform.
@@ -38,4 +38,4 @@ understand how you use our Platform, and to communicate with you.
 
 ## How To Contact Us
 
-For privacy-related questions, please contact us at privacy@openstatus.dev.
+For privacy-related questions, please contact us at info@affeasy.link.
