--- a/apps/web/content/legal/terms.mdx
+++ b/apps/web/content/legal/terms.mdx
@@ -3,8 +3,8 @@ title: Terms of Service
 updatedAt: 2023-05-29
 ---
 
-Subject to these Terms of Service (this "Agreement"), [openstatus.dev](/)
-("OpenStatus", "we", "us" and/or "our") provides access to OpenStatus's cloud
+Subject to these Terms of Service (this "Agreement"), [affeasy.link](/)
+("AffEasy", "we", "us" and/or "our") provides access to AffEasy's cloud
 platform as a service (collectively, the "Services"). By using or accessing the
 Services, you acknowledge that you have read, understand, and agree to be bound
 by this Agreement.
@@ -17,15 +17,15 @@ Agreement, you must not accept this Agreement and may not use the Services.
 
 ## 1. Acceptance of Terms
 
-By signing up and using the services provided by OpenStatus (referred to as the
+By signing up and using the services provided by AffEasy (referred to as the
 "Service"), you are agreeing to be bound by the following terms and conditions
-("Terms of Service"). The Service is owned and operated by OpenStatus ("Us",
+("Terms of Service"). The Service is owned and operated by AffEasy ("Us",
 "We", or "Our").
 
 ## 2. Description of Service
 
-OpenStatus provides an open source monitoring and status page tool. ("the
-Product"). The Product is accessible at openstatus.dev and other domains and
+AffEasy provides an affiliate link creation and affiliate marketing tool ("the
+Product"). The Product is accessible at affeasy.link and other domains and
 subdomains controlled by Us (collectively, "the Website").
 
 ## 3. Fair Use
@@ -60,7 +60,7 @@ means that you accept and agree to the changes.
 ## 6. Contact Information
 
 Questions or comments about the Website or these Terms of Service may be
-directed to our support team at support@openstatus.dev.
+directed to our support team at info@affeasy.link.
 
 ## 7. Disclaimer of Warranties
 
@@ -80,20 +80,14 @@ SPECIAL, INCIDENTAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES.
 
 ## 9. Governing Law and Jurisdiction
 
-These Terms of Service and any dispute or claim arising out of or related to
-them, their subject matter or their formation (in each case, including
-non-contractual disputes or claims) shall be governed by and construed in
-accordance with the internal laws of France without giving effect to any choice
-or conflict of law provision or rule. Any legal suit, action, or proceeding
-arising out of, or related to, these Terms of Service or the Website shall be
-instituted exclusively in the federal courts of France.
+These Terms of Service are governed by the laws of the State of California, excluding its conflicts of law rules. Any legal actions pertaining to these terms shall be filed exclusively in the state or federal courts of California.
 
 ---
 
-By using OpenStatus , you acknowledge that you have read these Terms of Service,
+By using AffEasy, you acknowledge that you have read these Terms of Service,
 understood them, and agree to be bound by them. If you do not agree to these
 Terms of Service, you are not authorized to use the Service. We reserve the
 right to change these Terms of Service at any time, so please review them
 frequently.
 
-Thank you for using OpenStatus!
+Thank you for using AffEasy!
