Documentation edits made through Mintlify web editor

--- a/apps/docs/introduction.mdx
+++ b/apps/docs/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: What is OpenStatus?
+title: What is AffEasy?
 ---
 
 OpenStatus is an open-source synthetic and frontend performance monitoring
