made some modifications to docs

--- a/apps/docs/introduction.mdx
+++ b/apps/docs/introduction.mdx
@@ -1,26 +1,65 @@
 ---
 title: What is AffEasy?
+"og:title": "What is AffEasy?"
+description: "AffEasy is the affiliate marketing platform for modern affiliate marketers."
+icon: rocket
 ---
 
-OpenStatus is an open-source synthetic and frontend performance monitoring
-service.
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="/images/thumbnail.jpg"
+    alt="AffEasy Thumbnail"
+    width="1200"
+    height="630"
+  />
+</Frame>
 
-## Products
+Our mission is deeply personal: to solve the very problems I encountered in my affiliate marketing journey. We aim to:
 
-OpenStatus is composed of two products:
+- Simplify affiliate link management across multiple networks
+- Dramatically reduce the time spent on link creation and tracking
+- Provide a unified platform that replaces the need for numerous separate tools
 
-<CardGroup cols={2}>
-  <Card title="Synthetic Monitoring" href="/synthetic">
-    Monitor your website or API availability and
-    performance from different locations around the world.
-  </Card>
-  <Card title="Real User Monitoring" href="/rum">
-    Monitor your website performance from your users' browsers.
-  </Card>
+## Features
 
-</CardGroup>
+Here are some of the features that AffEasy offers:
 
-## Trying OpenStatus
+<AccordionGroup>
+  <Accordion title="Unified Network Access" icon="globe">
+    Effortlessly connect to multiple affiliate networks through a single,
+    streamlined dashboard. Simplify your workflow and manage everything in one
+    place.
+  </Accordion>
+  <Accordion title="Advanced Analytics" icon="chart-line">
+    AffEasy provides powerful analytics for your links, including geolocation,
+    device, browser, and referrer information.
+  </Accordion>
+  <Accordion title="Branded Links" icon="link">
+    AffEasy offers free custom domains on all plans for you to create branded
+    affiliate links that stand out.
+  </Accordion>
+  <Accordion title="QR Codes" icon="qrcode">
+    QR codes and short links are like peas in a pod. AffEasy offers free QR
+    codes for every affiliate link you create – both via our dashboard and
+    programmatically.
+  </Accordion>
+</AccordionGroup>
+
+## Trying AffEasy
 
 The easiest way to quickly try the app is to signup on
-[www.openstatus.dev](https://www.openstatus.dev)
+[www.affeasy.link](https://www.affeasy.link)
+
+## Getting Started
+
+To get started with AffEasy, you can do any of the following:
+
+<CardGroup cols={2}>
+  <Card title="Quickstart Guide" icon="heart" href="/quickstart">
+    Follow our quickstart guide to get started with AffEasy
+  </Card>
+  <Card title="Try our API" icon="code" href="/api-reference/introduction">
+    Learn how to use Dub's API to create and manage links programmatically
+  </Card>
+</CardGroup>
