--- a/apps/docs/quickstart/affiliate-networks/introduction.mdx
+++ b/apps/docs/quickstart/affiliate-networks/introduction.mdx
@@ -3,130 +3,129 @@ title: "Introduction"
 description: "Learn how to connect an affiliate network to AffEasy"
 ---
 
-import Prerequisites from "/snippets/sdk-prerequisites.mdx";
-import LinkArguments from "/snippets/link-arguments.mdx";
+Connecting an affiliate network allows you to create affiliate links for brands that you have partnered with through that affiliate network. For example, if you have a partnership with Nike through Commission Junction (CJ), connecting your CJ account will allow you to create an affiliate link for Nike.
 
-<Prerequisites />
+## Currently Supported Affiliate Networks
 
-## 3. Create link
-
-Let's create a short link using the [Dub Python SDK](https://d.to/python).
-
-```python views.py
-def create_link(request):
-  res = d.links.create(request=operations.CreateLinkRequestBody(
-    url='https://google.com',
-  ))
-
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
-```
-
-<Accordion title="Full list of available attributes for the Link model">
-  <LinkArguments />
-</Accordion>
-
-## 3a. Create link with `externalId`
-
-Optionally, you can also pass an `externalId` field which is a unique identifier for the link in your own database to associate it with the link in Dub's system.
-
-```python views.py
-def create_link(request):
-  res = d.links.create(request=operations.CreateLinkRequestBody(
-    url='https://google.com',
-    external_id='12345',
-  ))
-
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
-```
-
-## 4. Upsert link
-
-Dub Python SDK provides a method to create or update a link so you don't have to worry about checking if the link already exists.
-
-```python views.py
-def upsert_link(request):
-  res = d.links.upsert(request=operations.UpsertLinkRequestBody(
-    url='https://google.com',
-  ))
-
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
-```
-
-## 5. Update link
-
-Let's update an existing link using the Dub Python SDK.
-
-You can do that in two ways:
-
-- Using the link's `linkId` in Dub's system.
-- Using the link's `externalId` in your own database (prefixed with `ext_`).
-
-```python views.py
-# Update a link by its linkId
-def update_link(request):
-  res = d.links.update(link_id="clx1gvi9o0005hf5momm6f7hj", request_body=operations.UpdateLinkRequestBody(
-    url='https://google.uk',
-  ))
-
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
-
-# Update a link by its externalId
-def update_link_external(request):
-  res = d.links.update(external_id="ext_12345", request_body=operations.UpdateLinkRequestBody(
-    url='https://google.uk',
-  ))
-
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
-```
-
-## 6. Retrieve analytics for link
-
-Dub allows you to retrieve analytics for a link using the Dub Python SDK.
-
-```python views.py
-# Retrieve the timeseries analytics for the last 7 days for a link
-def analytics(request):
-  res = d.analytics.retrieve(request=operations.RetrieveAnalyticsRequest(
-    link_id='clx1gvi9o0005hf5momm6f7hj',
-    interval='7d',
-    group_by='timeseries',
-  ))
-
-  return JsonResponse(res)
-```
-
-Simliarly, you can retrieve analytics for a link using the `externalId` field.
-
-```python views.py
-# Retrieve the timeseries analytics for the last 7 days for a link
-def analytics(request):
-  res = d.analytics.retrieve(request=operations.RetrieveAnalyticsRequest(
-    external_id='ext_12345',
-    interval='7d',
-    group_by='timeseries',
-  ))
-
-  return JsonResponse(res)
-```
-
-## 7. Examples
+Click on the cards below to learn how to connect the following networks.
 
 <CardGroup cols={2}>
   <Card
-    title="Python Example"
-    icon="arrow-up-right-from-square"
-    href="https://github.com/dubinc/examples/tree/main/python/django"
+    title="Commission Junction (CJ)"
+    icon={
+      <svg
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        width="801"
+        height="801"
+        viewBox="0 0 801 801"
+        className="h-8 w-8"
+      >
+        <path d="M400.78,44.63c196.16,0,355.74,159.57,355.74,355.76s-159.58,355.76-355.74,355.76S45.01,596.55,45.01,400.39,204.62,44.63,400.78,44.63m0-44.24C180.21,.39,.77,179.83,.77,400.39s179.45,400,400.02,400,399.98-179.44,399.98-400S621.33,.39,400.78,.39h0Z" />
+        <g>
+          <path d="M578.66,298.87h-210.94c-3.72,0-6.9,2.68-7.53,6.35l-9.85,57.81c-.8,4.66,2.8,8.92,7.53,8.92h135.26c4.73,0,8.32,4.26,7.53,8.92l-5.27,30.94-17.89,104.96c-3.75,21.98-24.68,39.86-46.67,39.86h-107.04c-3.72,0-6.9,2.68-7.53,6.35l-9.85,57.81c-.8,4.66,2.8,8.92,7.53,8.92h104.44c62.28,0,121.59-50.67,132.21-112.95l17.89-104.96,17.73-104.03c.8-4.66-2.8-8.92-7.53-8.92Z" />
+          <path d="M323.03,428.82c-21.98,0-36.82-17.88-33.07-39.86l17.89-104.96c3.75-21.98,24.68-39.86,46.67-39.86h107.04c3.72,0,6.9-2.68,7.53-6.35l9.85-57.81c.8-4.66-2.8-8.92-7.53-8.92h-104.44c-62.28,0-121.59,50.67-132.21,112.95l-17.89,104.96c-10.62,62.28,31.42,112.95,93.7,112.95h107.04c3.72,0,6.9-2.68,7.53-6.35l9.85-57.81c.8-4.66-2.8-8.92-7.53-8.92h-104.44Z" />
+        </g>
+        <g>
+          <path d="M711.07,718.67v5.64h-11.94v33.05h-6.36v-33.05h-11.94v-5.64h30.23Z" />
+          <path d="M724.12,718.67l12.38,30.45,12.16-30.45h8.07v38.68h-6.13v-28.46l-11.61,28.46h-5.36l-11.6-28.46v28.46h-6.13v-38.68h8.23Z" />
+        </g>
+      </svg>
+    }
+    href="commision-junction"
   >
-    See the full example on GitHub.
+    Learn how to connect your CJ account
+  </Card>
+  <Card
+    title="Rakuten Affiliates"
+    icon={
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+          width="500.000000pt" height="500.000000pt" viewBox="0 0 500.000000 500.000000"
+          preserveAspectRatio="xMidYMid meet" className="h-8 w-8">
+
+          <g transform="translate(0.000000,500.000000) scale(0.100000,-0.100000)"
+          fill="#000000" stroke="none">
+          <path d="M1452 2848 l3 -1523 285 0 285 0 3 473 2 472 205 0 205 0 356 -475
+          356 -475 354 0 c240 0 354 3 354 10 0 6 -190 263 -421 570 l-421 560 99 94
+          c112 107 186 207 243 329 287 618 -89 1344 -763 1472 -64 12 -178 15 -613 15
+          l-534 0 2 -1522z m1028 942 c182 -29 348 -182 389 -361 57 -245 -98 -500 -344
+          -565 -35 -10 -119 -14 -272 -14 l-223 0 0 475 0 475 193 0 c105 0 221 -5 257
+          -10z"/>
+          <path d="M960 986 c72 -69 486 -406 499 -406 9 0 403 54 876 120 473 66 1137
+          159 1475 205 338 47 620 87 625 90 6 2 -777 4 -1740 4 -1501 1 -1747 -1 -1735
+          -13z"/>
+          </g>
+          </svg>
+
+    }
+    href="rakuten"
+
+>
+
+      Learn how to connect your Rakuten Affiliate account
+
+  </Card>
+  <Card
+    title="Amazon"
+    icon={
+
+      <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="800px" height="800px" viewBox="0 0 35.418 35.418" className="h-8 w-8"
+        xml:space="preserve">
+      <g>
+        <path d="M20.948,9.891c-0.857,0.068-1.847,0.136-2.837,0.269c-1.516,0.195-3.032,0.461-4.284,1.053
+          c-2.439,0.994-4.088,3.105-4.088,6.209c0,3.898,2.506,5.875,5.669,5.875c1.057,0,1.913-0.129,2.703-0.328
+          c1.255-0.396,2.31-1.123,3.562-2.441c0.727,0.99,0.923,1.453,2.177,2.509c0.329,0.133,0.658,0.133,0.922-0.066
+          c0.791-0.659,2.174-1.848,2.901-2.508c0.328-0.267,0.263-0.66,0.066-0.992c-0.727-0.924-1.45-1.718-1.45-3.498v-5.943
+          c0-2.513,0.195-4.822-1.647-6.537c-1.518-1.391-3.891-1.916-5.735-1.916c-0.264,0-0.527,0-0.792,0
+          c-3.362,0.197-6.921,1.647-7.714,5.811c-0.13,0.525,0.267,0.726,0.53,0.793l3.691,0.464c0.396-0.07,0.593-0.398,0.658-0.73
+          c0.333-1.449,1.518-2.176,2.836-2.309c0.067,0,0.133,0,0.265,0c0.79,0,1.646,0.332,2.109,0.987
+          c0.523,0.795,0.461,1.853,0.461,2.775L20.948,9.891L20.948,9.891z M20.223,17.749c-0.461,0.925-1.253,1.519-2.11,1.718
+          c-0.131,0-0.327,0.068-0.526,0.068c-1.45,0-2.31-1.123-2.31-2.775c0-2.11,1.254-3.104,2.836-3.565
+          c0.857-0.197,1.847-0.265,2.836-0.265v0.793C20.948,15.243,21.01,16.43,20.223,17.749z M35.418,26.918v0.215
+          c-0.035,1.291-0.716,3.768-2.328,5.131c-0.322,0.25-0.645,0.107-0.503-0.254c0.469-1.145,1.541-3.803,1.04-4.412
+          c-0.355-0.465-1.826-0.43-3.079-0.322c-0.572,0.072-1.075,0.105-1.469,0.183c-0.357,0.033-0.431-0.287-0.071-0.537
+          c0.466-0.323,0.969-0.573,1.541-0.756c2.039-0.608,4.406-0.25,4.729,0.146C35.348,26.414,35.418,26.629,35.418,26.918z
+          M32.016,29.428c-0.466,0.357-0.965,0.682-1.468,0.973c-3.761,2.261-8.631,3.441-12.856,3.441c-6.807,0-12.895-2.512-17.514-6.709
+          c-0.396-0.324-0.073-0.789,0.393-0.539C5.549,29.5,11.709,31.26,18.084,31.26c4.013,0,8.342-0.754,12.463-2.371
+          c0.285-0.104,0.608-0.252,0.895-0.356C32.087,28.242,32.661,28.965,32.016,29.428z"/>
+      </g>
+      </svg>
+    }
+    href="amazon"
+
+>
+
+    Learn how to connect your Amazon Affiliate account
+
   </Card>
 </CardGroup>
+
+## Upcoming Support
+
+Here are the affiliate networks we are working to support next.
+
+<Card href="https://planethowl.com/">
+  <b>HOWL</b>
+</Card>
+<Card href="https://partnernetwork.ebay.com/">
+  <b>EBay</b>
+</Card>
+<Card href="https://partnerize.com/">
+  <b>Partnerize</b>
+</Card>
+<Card href="https://www.sovrn.com/">
+  <b>SOVRN</b>
+</Card>
+<Card href="https://www.shareasale.com/info/">
+  <b>Share A Sale</b>
+</Card>
+<Card href="https://impact.com/">
+  <b>Impact.com</b>
+</Card>
+<Card href="https://www.refersion.com/">
+  <b>Refersion</b>
+</Card>
+<Card href="https://www.flexoffers.com/">
+  <b>Flex Offers</b>
+</Card>
