--- a/apps/docs/quickstart/guide.mdx
+++ b/apps/docs/quickstart/guide.mdx
@@ -4,48 +4,49 @@ description: "Learn how to create an affiliate link using AffEasy"
 ---
 
 import Prerequisites from "/snippets/sdk-prerequisites.mdx";
-import LinkArguments from "/snippets/link-arguments.mdx";
 
 <Prerequisites />
 
 ## 2. Add an Affiliate Network
 
-Follow this guide to [connect an affiliate network to your AffEasy account](/guickstart/connect-affiliate-network)
+Connect an affiliate network to your AffEasy account by following [this](/guickstart/connect-affiliate-network) guide.
 
-## 3. Open the AffEasy link builder
+## 3. Open the Link Builder
 
-There are 3 ways to open the AffEasy link builder to create a short link:
+There are 3 ways to open the link builder to create an affiliate link:
 
-- Slowest: Click on the "Create link" button on the dashboard.
-- Faster: Use the keyboard shortcut c to open the link builder.
-- Fastest: Just paste in a valid URL into the dashboard. This will automatically open the link builder and pre-fill the URL field.
+- **Slowest:** Click the "Create link" button on the dashboard.
+- **Faster:** Use the keyboard shortcut **c** to open the link builder.
+- **Fastest:** Paste a valid URL into the dashboard. This will automatically open the link builder and pre-fill the URL.
 
-As you can see, the link builder also gives you a preview of your short link on social media platforms like X (formerly Twitter), Facebook, and LinkedIn.
+You’ll also see a preview of how your short link will appear on platforms like X (formerly Twitter), Facebook, and LinkedIn.
 
-## 4. Enter your destination URL
+## 4. Enter Your Destination URL
 
-Enter your destination URL in the "Destination URL" field. You can enter the URL with or without the https:// protocol – behind the scenes, AffEasy will automatically make sure it's formatted correctly. 5. Set a short link slug
+Type the URL in the "Destination URL" field. You can include or leave out the `https://` – AffEasy will format it correctly for you.
 
-## 5. Under the Short Link field, you can either (OPTIONAL):
+## 5. Set a Short Link Slug
 
-Enter your own short link slug
-Generate a random short link slug
-Generate a short link slug with AI.
+In the Short Link field, you can:
 
-This step is optional. If you don't enter a short link slug, AffEasy will generate one for you.
+- Type your own short link slug.
+- Generate a random one.
 
-## 6. Customize your link previews
+This step is optional. If you skip it, AffEasy will generate a slug for you.
 
-OPTIONAL
-You can also set custom social media cards for your short link to control how your links look when shared on social media platforms like X (formerly Twitter), LinkedIn, Slack, Telegram, iMessage, and more.
-Create custom social media cards for your links
-You can also use AI to generate custom social media cards for your links. Learn more.
+## 6. Customize Your Link Previews
 
-## 7. Add tags to your short link
+You can control how your links appear on social media by setting custom social media cards. This is optional and works for platforms like X, LinkedIn, Slack, Telegram, iMessage, and more.
 
-OPTIONAL
-Optionally, you can add tags to your short link to help organize your links and make them easier to find.
-Fun fact: You can assign multiple tags to a given AffEasy link
-You can also filter your analytics by tags, which allows you to create powerful campaign-specific reports for your links.
+## 7. Add Tags to Your Link
 
-That's it! You've just created your first short link on AffEasy.
+You can add tags to organize your links and make them easier to find.
+
+- Tip: You can assign multiple tags to one AffEasy link.
+- Bonus: Filter analytics by tags to create detailed, campaign-specific reports.
+
+## 8. You’re Done!
+
+Click "Create link," and AffEasy will do its magic. It will identify the store or brand from your URL and use your affiliate network connections to create an affiliate link for you. AffEasy then provides both a shortened and original version of your affiliate link. [Learn more here.](/how-it-works)
+
+Congrats! You’ve created your first affiliate link on AffEasy.
