--- a/apps/docs/quickstart/affiliate-networks/rakuten.mdx
+++ b/apps/docs/quickstart/affiliate-networks/rakuten.mdx
@@ -1,132 +1,165 @@
 ---
-title: "Rakuten Affiliates"
-description: "Learn how to connect your Rakuten Affiliates account to AffEasy"
+title: "Connecting Rakuten Affiliates to AffEasy"
+description: "This guide will walk you through the process of connecting your Rakuten Affiliates account to AffEasy, streamlining your affiliate marketing workflow."
 ---
 
-import Prerequisites from "/snippets/sdk-prerequisites.mdx";
-import LinkArguments from "/snippets/link-arguments.mdx";
+## 1. Prerequisites
 
-<Prerequisites />
+Before you begin, ensure you have:
 
-## 3. Create link
+- An active [Rakuten Advertising Publisher Account](https://rakutenadvertising.com/)
+- An AffEasy account
 
-Let's create a short link using the [Dub Python SDK](https://d.to/python).
+<Info>
+  If you don't have a Rakuten publisher account, [sign up
+  here](https://auth.rakutenmarketing.com/auth/realms/rakuten-advertising/protocol/openid-connect/registrations?client_id=publisher-dashboard&redirect_uri=https%3A%2F%2Fpublisher.rakutenadvertising.com&response_type=code)
+</Info>
 
-```python views.py
-def create_link(request):
-  res = d.links.create(request=operations.CreateLinkRequestBody(
-    url='https://google.com',
-  ))
+## 2. Obtain Your Site ID (SID)
 
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
-```
+- Log in to your Rakuten publisher account.
+- On the dashboard, locate your Site ID (SID).
+- Copy the numeric portion only (e.g., for SID4022211, copy 4022211).
 
-<Accordion title="Full list of available attributes for the Link model">
-  <LinkArguments />
-</Accordion>
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/affiliate-networks/rakuten/rakuten-siteid.png"
+    alt="Rakuten Site ID"
+    width="1200"
+    height="630"
+  />
+</Frame>
 
-## 3a. Create link with `externalId`
+<Info>
+  
+  AffEasy currently supports one SID per account. We're working on supporting multiple SIDs in the future.
 
-Optionally, you can also pass an `externalId` field which is a unique identifier for the link in your own database to associate it with the link in Dub's system.
+</Info>
 
-```python views.py
-def create_link(request):
-  res = d.links.create(request=operations.CreateLinkRequestBody(
-    url='https://google.com',
-    external_id='12345',
-  ))
+## 3. Access the Developer Portal
 
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
-```
+- Click the menu icon in the top right corner of your publisher dashboard.
+- Select "Developer Portal" to access the [Rakuten Developer Portal](https://developers.rakutenadvertising.com/)
+- You should be automatically logged in. If not, use your publisher account credentials.
 
-## 4. Upsert link
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="/images/affiliate-networks/rakuten/rakuten-dashboard.png"
+    alt="Rakuten Dashboard"
+    width="1200"
+    height="630"
+  />
+</Frame>
 
-Dub Python SDK provides a method to create or update a link so you don't have to worry about checking if the link already exists.
+## 4. Create a New Application
 
-```python views.py
-def upsert_link(request):
-  res = d.links.upsert(request=operations.UpsertLinkRequestBody(
-    url='https://google.com',
-  ))
+- In the developer portal, click your account menu (top right).
+- Select "Applications".
 
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
-```
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/affiliate-networks/rakuten/rakuten-developer-dashboard.png"
+    alt="Rakuten Dashboard"
+    width="1200"
+    height="630"
+  />
+</Frame>
 
-## 5. Update link
+- Click "Add Application".
 
-Let's update an existing link using the Dub Python SDK.
+{" "}
 
-You can do that in two ways:
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/affiliate-networks/rakuten/rakuten-application.png"
+    alt="Rakuten Dashboard"
+    width="1200"
+    height="630"
+  />
+</Frame>
 
-- Using the link's `linkId` in Dub's system.
-- Using the link's `externalId` in your own database (prefixed with `ext_`).
+- Name your application (e.g., "App 1").
+- After creation, copy the provided Client ID and Client Secret.
 
-```python views.py
-# Update a link by its linkId
-def update_link(request):
-  res = d.links.update(link_id="clx1gvi9o0005hf5momm6f7hj", request_body=operations.UpdateLinkRequestBody(
-    url='https://google.uk',
-  ))
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/affiliate-networks/rakuten/rakuten-secret.png"
+    alt="Rakuten Dashboard"
+    width="1200"
+    height="630"
+  />
+</Frame>
 
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
+## 5. Connect Rakuten to AffEasy
 
-# Update a link by its externalId
-def update_link_external(request):
-  res = d.links.update(external_id="ext_12345", request_body=operations.UpdateLinkRequestBody(
-    url='https://google.uk',
-  ))
+- Go to your [AffEasy account settings.](https://app.affeasy.link/settings/networks)
+- Click "Add".
 
-  return JsonResponse({
-    'short_link': res.link_schema.short_link
-  })
-```
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/affiliate-networks/affeasy-network.png"
+    alt="Rakuten Dashboard"
+    width="1200"
+    height="630"
+  />
+</Frame>
 
-## 6. Retrieve analytics for link
+- Select Rakuten from the list.
+- Enter the following details:
 
-Dub allows you to retrieve analytics for a link using the Dub Python SDK.
+  - Account ID (SID from Step 2)
+  - Client ID (from Step 4)
+  - Client Secret (from Step 4)
 
-```python views.py
-# Retrieve the timeseries analytics for the last 7 days for a link
-def analytics(request):
-  res = d.analytics.retrieve(request=operations.RetrieveAnalyticsRequest(
-    link_id='clx1gvi9o0005hf5momm6f7hj',
-    interval='7d',
-    group_by='timeseries',
-  ))
+- Click "Add Network" to finalize the integration.
 
-  return JsonResponse(res)
-```
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/affiliate-networks/rakuten/affeasy-addrakuten.png"
+    alt="Rakuten Dashboard"
+    width="300"
+    height="150"
+  />
+</Frame>
 
-Simliarly, you can retrieve analytics for a link using the `externalId` field.
+## What's Next
 
-```python views.py
-# Retrieve the timeseries analytics for the last 7 days for a link
-def analytics(request):
-  res = d.analytics.retrieve(request=operations.RetrieveAnalyticsRequest(
-    external_id='ext_12345',
-    interval='7d',
-    group_by='timeseries',
-  ))
+Congratulations! Your Rakuten Advertising account is now connected to AffEasy. Here's what you can expect:
 
-  return JsonResponse(res)
-```
+- AffEasy will automatically sync your Rakuten brand partnerships.
+- You can now create affiliate links for your Rakuten brands directly from your AffEasy dashboard.
+- No need to use Rakuten's tools for link generation anymore.
 
-## 7. Examples
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/affiliate-networks/rakuten/affeasy-rakutenadded.png"
+    alt="Rakuten Dashboard"
+    width="1200"
+    height="630"
+  />
+</Frame>
 
-<CardGroup cols={2}>
-  <Card
-    title="Python Example"
-    icon="arrow-up-right-from-square"
-    href="https://github.com/dubinc/examples/tree/main/python/django"
-  >
-    See the full example on GitHub.
-  </Card>
-</CardGroup>
+<Info>
+
+To learn how to create affiliate links using AffEasy, check out our [comprehensive link creation guide](http://docs.affeasy.link/quickstart/guide).
+
+  </Info>
+
+## Troubleshooting
+
+If you encounter any issues during the integration process:
+
+- Double-check all entered information for accuracy.
+- Ensure your Rakuten account is in good standing.
+- Clear your browser cache and try again.
+- Contact AffEasy support if problems persist.
+
+We're constantly improving our integration process. If you have any feedback or suggestions, please let us know!
