--- a/apps/docs/quickstart/affiliate-networks/rakuten.mdx
+++ b/apps/docs/quickstart/affiliate-networks/rakuten.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Connecting Rakuten Affiliates to AffEasy"
-description: "This guide will walk you through the process of connecting your Rakuten Affiliates account to AffEasy, streamlining your affiliate marketing workflow."
+title: "Rakuten Advertising"
+description: "This guide will walk you through the process of connecting your Rakuten Advertising Publisher account to AffEasy, streamlining your affiliate marketing workflow."
 ---
 
 ## 1. Prerequisites
@@ -10,10 +10,10 @@ Before you begin, ensure you have:
 - An active [Rakuten Advertising Publisher Account](https://rakutenadvertising.com/)
 - An AffEasy account
 
-<Info>
+<Tip>
   If you don't have a Rakuten publisher account, [sign up
   here](https://auth.rakutenmarketing.com/auth/realms/rakuten-advertising/protocol/openid-connect/registrations?client_id=publisher-dashboard&redirect_uri=https%3A%2F%2Fpublisher.rakutenadvertising.com&response_type=code)
-</Info>
+</Tip>
 
 ## 2. Obtain Your Site ID (SID)
 
@@ -147,11 +147,11 @@ Congratulations! Your Rakuten Advertising account is now connected to AffEasy. H
   />
 </Frame>
 
-<Info>
+<Tip>
 
 To learn how to create affiliate links using AffEasy, check out our [comprehensive link creation guide](http://docs.affeasy.link/quickstart/guide).
 
-  </Info>
+</Tip>
 
 ## Troubleshooting
 
