--- a/apps/docs/quickstart/affiliate-networks/introduction.mdx
+++ b/apps/docs/quickstart/affiliate-networks/introduction.mdx
@@ -37,7 +37,7 @@ Click on the cards below to learn how to connect the following networks.
     Learn how to connect your CJ account
   </Card>
   <Card
-    title="Rakuten Affiliates"
+    title="Rakuten Advertising"
     icon={
           <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
           width="500.000000pt" height="500.000000pt" viewBox="0 0 500.000000 500.000000"
@@ -62,7 +62,7 @@ Click on the cards below to learn how to connect the following networks.
 
 >
 
-      Learn how to connect your Rakuten Affiliate account
+      Learn how to connect your Rakuten Advertising publisher account
 
   </Card>
   <Card
