--- a/apps/docs/quickstart/affiliate-networks/rakuten.mdx
+++ b/apps/docs/quickstart/affiliate-networks/rakuten.mdx
@@ -62,7 +62,7 @@ Before you begin, ensure you have:
   <img
     className="rounded-lg border border-gray-100"
     src="images/affiliate-networks/rakuten/rakuten-developer-dashboard.png"
-    alt="Rakuten Dashboard"
+    alt="Rakuten Developer Dashboard"
     width="1200"
     height="630"
   />
