try and fix photo problem

--- a/apps/docs/quickstart/affiliate-networks/rakuten.mdx
+++ b/apps/docs/quickstart/affiliate-networks/rakuten.mdx
@@ -24,7 +24,7 @@ Before you begin, ensure you have:
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="images/affiliate-networks/rakuten/rakuten-siteid.png"
+    src="images/affiliate-networks/rakuten/rakuten-siteid.jpg"
     alt="Rakuten Site ID"
     width="1200"
     height="630"
@@ -140,7 +140,7 @@ Congratulations! Your Rakuten Advertising account is now connected to AffEasy. H
 <Frame>
   <img
     className="rounded-lg border border-gray-100"
-    src="images/affiliate-networks/rakuten/affeasy-rakutenadded.png"
+    src="images/affiliate-networks/rakuten/affeasy-rakutenadded.jpg"
     alt="Rakuten Dashboard"
     width="1200"
     height="630"
