test docs change

--- a/apps/docs/how-it-works.mdx
+++ b/apps/docs/how-it-works.mdx
@@ -1,64 +1,51 @@
 ---
 title: How it Works?
-"og:title": "What is AffEasy?"
-description: "AffEasy is the affiliate marketing platform for modern affiliate marketers."
+"og:title": "How does AffEasy work?"
+description: "AffEasy streamlines the affiliate marketing process by providing a unified platform for managing your affiliate links across multiple networks. Here's a high-level overview of how AffEasy works."
+icon: wand-magic-sparkles
 ---
 
-<Frame>
-  <img
-    className="rounded-lg border border-gray-100"
-    src="/images/thumbnail.jpg"
-    alt="AffEasy Thumbnail"
-    width="1200"
-    height="630"
-  />
-</Frame>
-
-Our mission is deeply personal: to solve the very problems I encountered in my affiliate marketing journey. We aim to:
-
-- Simplify affiliate link management across multiple networks
-- Dramatically reduce the time spent on link creation and tracking
-- Provide a unified platform that replaces the need for numerous separate tools
-
-## Features
-
-Here are some of the features that AffEasy offers:
+## 1. Network Connection
 
 <AccordionGroup>
-  <Accordion title="Unified Network Access" icon="globe">
-    Effortlessly connect to multiple affiliate networks through a single,
-    streamlined dashboard. Simplify your workflow and manage everything in one
-    place.
+  <Accordion title="Connect Your Accounts" icon="plug">
+    Users start by connecting their existing affiliate network accounts to
+    AffEasy. This allows our platform to securely access and manage your
+    affiliate partnerships in one place.
   </Accordion>
-  <Accordion title="Advanced Analytics" icon="chart-line">
-    AffEasy provides powerful analytics for your links, including geolocation,
-    device, browser, and referrer information.
-  </Accordion>
-  <Accordion title="Branded Links" icon="link">
-    AffEasy offers free custom domains on all plans for you to create branded
-    affiliate links that stand out.
-  </Accordion>
-  <Accordion title="QR Codes" icon="qrcode">
-    QR codes and short links are like peas in a pod. AffEasy offers free QR
-    codes for every affiliate link you create – both via our dashboard and
-    programmatically.
+  <Accordion title="Brand Discovery" icon="magnifying-glass">
+    Once connected, AffEasy automatically identifies which brands you have
+    partnerships with across all your connected networks.
   </Accordion>
 </AccordionGroup>
 
-## Trying AffEasy
+## 2. Link Creation
 
-The easiest way to quickly try the app is to signup on
-[www.affeasy.link](https://www.affeasy.link)
+<AccordionGroup>
+  <Accordion title="Simplified Link Generation" icon="link">
+    When you want to create an affiliate link, just go to your AffEasy
+    dashboard, and paste the link. AffEasy automatically figures out which brand
+    the link is for.
+  </Accordion>
+  <Accordion title="Automated Network Communication" icon="server">
+    AffEasy then sends a request to the appropriate affiliate network on your
+    behalf.
+  </Accordion>
+  <Accordion title="Instant Link Retrieval" icon="bolt">
+    The affiliate network generates the link and sends it back to AffEasy, which
+    is then presented to you.
+  </Accordion>
+</AccordionGroup>
 
 ## Getting Started
 
-To get started with AffEasy, you can do any of the following:
+Ready to streamline your affiliate marketing workflow? Here's how to get started with AffEasy:
 
 <CardGroup cols={2}>
-  <Card title="Quickstart Guide" icon="heart" href="/quickstart">
-    Follow our quickstart guide to get started with AffEasy
+  <Card title="Sign Up" icon="user-plus" href="https://www.affeasy.link">
+    Create your AffEasy account at www.affeasy.link
   </Card>
-  <Card title="Try our API" icon="code" href="/api-reference/introduction">
-    Learn how to use Dub's API to create and manage links programmatically
+  <Card title="Connect Networks" icon="network-wired" href="/quickstart">
+    Follow our quickstart guide to connect your first affiliate network
   </Card>
 </CardGroup>
