--- a/apps/docs/quickstart/affiliate-networks/rakuten.mdx
+++ b/apps/docs/quickstart/affiliate-networks/rakuten.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Rakuten Advertising"
 description: "This guide will walk you through the process of connecting your Rakuten Advertising Publisher account to AffEasy, streamlining your affiliate marketing workflow."
+icon: link
 ---
 
 ## 1. Prerequisites
