--- a/apps/docs/quickstart/affiliate-networks/commision-junction.mdx
+++ b/apps/docs/quickstart/affiliate-networks/commision-junction.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Commission Junction (CJ)"
 description: "This guide will walk you through the process of connecting your Commission Junction (CJ) account to AffEasy, streamlining your affiliate marketing workflow."
+icon: link
 ---
 
 ## 1. Prerequisites
