--- a/apps/docs/quickstart/guide.mdx
+++ b/apps/docs/quickstart/guide.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Get Started"
+"og:title": "Create your first link on AffEasy"
 description: "Learn how to create an affiliate link using AffEasy"
+icon: play
 ---
 
 import Prerequisites from "/snippets/sdk-prerequisites.mdx";
@@ -19,6 +21,16 @@ There are 3 ways to open the link builder to create an affiliate link:
 - **Faster:** Use the keyboard shortcut **c** to open the link builder.
 - **Fastest:** Paste a valid URL into the dashboard. This will automatically open the link builder and pre-fill the URL.
 
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/guide/link-creation-dashboard.png"
+    alt="Link Builder"
+    width="1200"
+    height="630"
+  />
+</Frame>
+
 You’ll also see a preview of how your short link will appear on platforms like X (formerly Twitter), Facebook, and LinkedIn.
 
 ## 4. Enter Your Destination URL
@@ -34,6 +46,16 @@ In the Short Link field, you can:
 
 This step is optional. If you skip it, AffEasy will generate a slug for you.
 
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/guide/url-entered.png"
+    alt="URL Entered"
+    width="1200"
+    height="630"
+  />
+</Frame>
+
 ## 6. Customize Your Link Previews
 
 You can control how your links appear on social media by setting custom social media cards. This is optional and works for platforms like X, LinkedIn, Slack, Telegram, iMessage, and more.
@@ -45,8 +67,28 @@ You can add tags to organize your links and make them easier to find.
 - Tip: You can assign multiple tags to one AffEasy link.
 - Bonus: Filter analytics by tags to create detailed, campaign-specific reports.
 
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/guide/tags-added.png"
+    alt="Tags Added"
+    width="1200"
+    height="630"
+  />
+</Frame>
+
 ## 8. You’re Done!
 
-Click "Create link," and AffEasy will do its magic. It will identify the store or brand from your URL and use your affiliate network connections to create an affiliate link for you. AffEasy then provides both a shortened and original version of your affiliate link. [Learn more here.](/how-it-works)
+Click "Create link," and AffEasy will do its magic. It will identify the store or brand from your URL and use your affiliate network connections to create an affiliate link for you. Congrats! You’ve created your first link on AffEasy.
 
-Congrats! You’ve created your first affiliate link on AffEasy.
+<Frame>
+  <img
+    className="rounded-lg border border-gray-100"
+    src="images/guide/link-created.png"
+    alt="Link Created"
+    width="1200"
+    height="630"
+  />
+</Frame>
+
+AffEasy provides both a shortened and original version of your affiliate link. Learn more about how Affeasy works [here.](/how-it-works)
